Blender Cycles Render results looking different at the BMW MikePan Benchmark File. #38615

Closed
opened 2014-02-12 17:50:34 +01:00 by David Schrott · 19 comments

System Information
Operating system and graphics card
Windows 7 64 bit
AMD Phentom 2 X6 1100T
AMD Radeon HD 6950 2GB VRam

Blender Version
Broken: (example: 2.69.7 4b206af, see splash screen) 2.69.10 5c8d5c7
Worked: (optional) 2.69 Release version

Short description of error
When you render the BMW-MikePan Scene you get with the new build a different result on the headlight of the car.
General you could look through the glass, now with these build you get 100 percent reflection.

I
Exact steps for others to reproduce the error
Based on a (as simple as possible) attached .blend file with minimum amount of steps
I used the BMW-MikePan.blend from the 2.61 Demo Files.

1.You start blender
2. Open the Scene
3. Go to Viewport Rendering or Render ( same problem)

**System Information** Operating system and graphics card Windows 7 64 bit AMD Phentom 2 X6 1100T AMD Radeon HD 6950 2GB VRam **Blender Version** Broken: (example: 2.69.7 4b206af, see splash screen) 2.69.10 5c8d5c7 Worked: (optional) 2.69 Release version **Short description of error** When you render the BMW-MikePan Scene you get with the new build a different result on the headlight of the car. General you could look through the glass, now with these build you get 100 percent reflection. I **Exact steps for others to reproduce the error** Based on a (as simple as possible) attached .blend file with minimum amount of steps I used the BMW-MikePan.blend from the 2.61 Demo Files. 1.You start blender 2. Open the Scene 3. Go to Viewport Rendering or Render ( same problem)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Brecht Van Lommel was assigned by David Schrott 2014-02-12 17:50:34 +01:00
Author

Added subscriber: @thelasthope

Added subscriber: @thelasthope

I don't see any difference between 5c8d5c7 and the 2.69 release, on OS X and Windows 7 64 bit.

Can you attach a screenshot that shows the difference? Which CPU model do you have?

I don't see any difference between 5c8d5c7 and the 2.69 release, on OS X and Windows 7 64 bit. Can you attach a screenshot that shows the difference? Which CPU model do you have?
Author

The same result you get also with 5c8d5c7

The same result you get also with 5c8d5c7
Author

When you look at my System Information you see my CPU
AMD Phentom 2 X6 1100T

When you look at my System Information you see my CPU AMD Phentom 2 X6 1100T

Added subscriber: @Lockal

Added subscriber: @Lockal

@Lockal, any idea what might be causing this? I suspect the SSE/AVX optimizations are involved.

@Lockal, any idea what might be causing this? I suspect the SSE/AVX optimizations are involved.
Member

Added subscriber: @ThomasDinges

Added subscriber: @ThomasDinges
Member

I also can't reproduce this problem. I don't see any connection with SSE optimizations. Front headlights are just simple mesh objects with no textures.

By the way, I don't recognize this BMW-MikePan variant. The original file from blenderartists has different headlights material and bmw.blend from SVN testfiles has different reflection on the front window.

Dull lights remind me of recent indirect clamping by Dingto (e29a45b396)
with this warning:

WARNING: This breaks backwards compatibility. If you had Clamping enabled in an old file, you must re-enable either Direct/Indirect clamping or both again.

Maybe this BMW.blend modification has some kind of clamping, which made this file incompatible?

I also can't reproduce this problem. I don't see any connection with SSE optimizations. Front headlights are just simple mesh objects with no textures. By the way, I don't recognize this BMW-MikePan variant. The original file from blenderartists has different headlights material and bmw.blend from SVN testfiles has different reflection on the front window. Dull lights remind me of recent indirect clamping by Dingto (e29a45b396) with this warning: > WARNING: This breaks backwards compatibility. If you had Clamping enabled in an old file, you must re-enable either Direct/Indirect clamping or both again. Maybe this BMW.blend modification has some kind of clamping, which made this file incompatible?
Member

Also, both renders have almost no noise, so I guess this modification has some kind of clamping.

Also, both renders have almost no noise, so I guess this modification has some kind of clamping.

Added subscriber: @brecht

Added subscriber: @brecht

@thelasthope: Next time pls upload the .blend file directly for everyone here, that's easier, especially since there are some different versions of it.

I found the problem @brecht and @Lockal
In this particular file version of the BMW, the Glass shader has an IOR of 1.0.

In 2.69, we clamped the IOR to "1.0 + 1e-5f", now it's just "1e-5f". Setting the nodes glass IOR to 1.001 fixes the issue and converges to the same result in current master.

Therefore I would not consider this a bug and rather mention this in the release logs, among my clamping backwards compatibility change.

@thelasthope: Next time pls upload the .blend file directly for everyone here, that's easier, especially since there are some different versions of it. I found the problem @brecht and @Lockal In this particular file version of the BMW, the Glass shader has an IOR of 1.0. In 2.69, we clamped the IOR to "1.0 + 1e-5f", now it's just "1e-5f". Setting the nodes glass IOR to 1.001 fixes the issue and converges to the same result in current master. Therefore I would not consider this a bug and rather mention this in the release logs, among my clamping backwards compatibility change.
Author

@ThomasDinges: Sorry for that, it is the first time i report a bug.

Did you need still the blend file. When yes tell me.

@ThomasDinges: Sorry for that, it is the first time i report a bug. Did you need still the blend file. When yes tell me.

It should be fine now, we know the cause of this. :)

It should be fine now, we know the cause of this. :)

Oh, well this should actually keep working, it's probably a division by zero somewhere, let me see.

Oh, well this should actually keep working, it's probably a division by zero somewhere, let me see.

This issue was referenced by blender/blender-addons-contrib@8547d17739

This issue was referenced by blender/blender-addons-contrib@8547d17739d1fc6eb2bd648af8dadae809865614

This issue was referenced by 8547d17739

This issue was referenced by 8547d17739d1fc6eb2bd648af8dadae809865614

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 8547d17739.

Closed by commit 8547d17739.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#38615
No description provided.