Fix T38615: cycles rendering beckmann/GGX refraction wrong with IOR equal to 1.